--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "react-stacked-center-carousel": "^1.0.14",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
