--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
@@ -20,9 +21,11 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "react-stacked-center-carousel": "^1.0.14",
     "react-toastify": "^11.0.5",
+    "redux-persist": "^6.0.0",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.3"
   },
