--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/react-query": "^5.74.4",
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
     "dotenv": "^16.5.0",
