--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-stacked-center-carousel": "^1.0.14",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.3"
   },
