--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.74.4",
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.503.0",
